      the included troves is unavailable at the time of the clone (CNY-1913)
    * clone and promote now work when cloning over removed packages. (CNY-1955)
    * searchPath will now only return the best flavor match when matching
      against groups with more than one version of a package available.
      (CNY-1881)
    * crossRequires are now ignored when not cross compiling (CNY-1950)

Changes in 1.1.92:
  o Bug Fixes:
    * ccs2tar correctly handles changesets with duplicate contents and
      hard links. (CNY-1953)
    * An error in the way attributes of ServerProxy classes get
      marshaled has been fixed. (CNY-1956)
    * If local flags (e.g. kernel.smp) are defined in /etc/conary/use,
      cooking no longer produces a traceback. (CNY-1963)
    * The last trove source in a trove source stack is now properly
      passed flavor information. (CNY-1969)
    * Derived packages properly handle files that were not flavored due
      to an exception in the upstream packages. (CNY-1954)
    * The transport layer is automatically encoding non-ASCII strings
      into XMLRPC Binary objects. (CNY-1932)
    * An error that was causing warnings to be printed while cooking
      groups has been fixed. (CNY-1957)

  o Server Changes
    * A bug which triggered an exception while migrating postgresql
      repositories has been fixed. (CNY-1912)

  o Build Changes:
    * Mono (CIL) files are now placed in :cil components by default.
      (CNY-1821)

  o Other Changes
    * The transport layer is using BoundedStringIO objects for
      compression, decompression and XMLRPC encoding/decoding, to
      avoid excessive memory consumption. (CNY-1968)

Changes in 1.1.91:
  o Client Changes:
    * A new configuration option, "flavorPreferences", has been added.
      The client uses this list of flavors in trove selection.
      (CNY-1710)
    * Large files are now compressed on disk instead of in memory when
      creating rollbacks. (CNY-1896)