@@ -8,6 +8,8 @@ Changes in @NEW@:
       against groups with more than one version of a package available.
       (CNY-1881)
     * crossRequires are now ignored when not cross compiling (CNY-1950)
+  o Build Changes:
+    * Filesets now accept macros (CNY-148)
 
 Changes in 1.1.92:
   o Bug Fixes:
